examples/neg/namer/issue950/cannot_find_function.effekt
interface Greet { def sayHello(): Unit }

def helloWorld() = try {
  Hello()
  // [error] Cannot find a function named `Hello`.
} with Greet {
  def sayHello() = { println("Hello!"); resume(()) }
}

def main() = {
  helloWorld() // throws:  Cannot find a function named `Hello`.
}